--- a/client/src/css/Article.css
+++ b/client/src/css/Article.css
@@ -76,10 +76,10 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 15px;
+    gap: 10px;
 }
 
-.article__last_article__details_article span {
+.article__last_article__details_article div {
     display: flex;
     flex-direction: row;
     align-items : center;
@@ -92,7 +92,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    transform: translateY(-3px);
 }
 
 .article__last_articles {
@@ -172,19 +171,27 @@
     width: 100%;
 }
 
+.article__last_articles__cards__card__info__container__details_article {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 95%;
+    padding: 10px 0;
+}
+
 .article__last_articles__cards__card__info__details_article {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 15px;
+    gap: 10px;
 }
 
 .article__last_articles__cards__card__info__details_article span {
     color: black;
 }
 
-.article__last_articles__cards__card__info__details_article span {
+.article__last_articles__cards__card__info__details_article div {
     display: flex;
     flex-direction: row;
     align-items : center;
@@ -197,6 +204,5 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    transform: translateY(-3px);
 }
 
