--- a/client/src/css/Blog.css
+++ b/client/src/css/Blog.css
@@ -71,10 +71,10 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 15px;
+    gap: 10px;
 }
 
-.blog__last_blog__details_blog span {
+.blog__last_blog__details_blog div {
     display: flex;
     flex-direction: row;
     align-items : center;
@@ -87,7 +87,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    transform: translateY(-3px);
 }
 
 .blog__last_blogs {
@@ -128,8 +127,7 @@
     align-items: center;
     justify-content: space-between;
     width: 300px;
-    height: 315px;
-    padding: 20px 15px;
+    padding: 15px;
     background-color: white;
     border-radius: 15px;
 }
@@ -145,7 +143,7 @@
     color: black;
 }
 
-.blog__last_blogs__cards__card__info__ {
+.blog__last_blogs__cards__card__info__container__details_blog {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -158,14 +156,14 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 15px;
+    gap: 10px;
 }
 
 .blog__last_blogs__cards__card__info__details_blog span {
     color: black;
 }
 
-.blog__last_blogs__cards__card__info__details_blog span {
+.blog__last_blogs__cards__card__info__details_blog div {
     display: flex;
     flex-direction: row;
     align-items : center;
@@ -178,6 +176,5 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    transform: translateY(-3px);
 }
 
