--- a/client/src/css/Patients.css
+++ b/client/src/css/Patients.css
@@ -19,13 +19,13 @@
     align-items: center;
     justify-content: center;
     gap: 25px;
-    width: 1050px;
-    overflow: auto;
+    width: 800px;
+    padding: 15px;
 }
 
 .patients_card {
     width: 300px;
-    height: 350px;
+    height: 350px !important;
     padding: 10px;
     background-color: white;
     border-radius: 30px;
@@ -58,38 +58,24 @@
     border-radius: 50px;
 }
 
-.patients_navigation {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 15px;
+.patients_cards .swiper-pagination {
+    position: static;
+    transform: translateY(20%);
+    padding: 10px 0;
 }
 
-.container_pages {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-}
-
-.FaArrowLeft, .FaArrowRight {
+.patients_cards .swiper-pagination-bullet {
+    width: 15px;
+    height: 15px;
     padding: 5px;
-    width: 30px;
-    height: 30px;
-    background-color: white;
-    border-radius: 50px;
+    background-color: grey;
+    opacity: 0.7;
+    border-radius: 50%;
+    transform: scale(100%);
+    transition: ease .2s;
 }
 
-.pages {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding: 5px;
-    width: 25px;
-    height: 25px;
-    font-weight: bold;
-    background-color: white;
-    color: black;
-    border-radius: 50px;
+.patients_cards .swiper-pagination-bullet.swiper-pagination-bullet-active {
+    background-color: #007bff;
+    transform: scale(125%);
 }
