--- a/client/src/css/InfoServices.css
+++ b/client/src/css/InfoServices.css
@@ -1,4 +1,4 @@
-.services {
+.info_services {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -8,18 +8,18 @@
     background-color: #1c47a4;
 }
 
-.services h2 {
+.info_services h2 {
     color: white;
     font-size: 40px;
 }
 
-.services_container {
+.info_services_container {
     display: flex;
     flex-direction: row;
     gap: 70px;
 }
 
-.services_cards {
+.info_services_cards {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -33,12 +33,12 @@
     transition: ease .5s;
 }
 
-.services_cards:hover {
+.info_services_cards:hover {
     transform: scale(108%);
     box-shadow: 20px 20px 0px #00b4fc,-20px -20px 0px #012677;
 }
 
-.services_cards_text {
+.info_services_cards_text {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -46,10 +46,10 @@
     gap: 25px;
 }
 
-.services_cards_text p {
+.info_services_cards_text p {
     text-wrap: pretty;
 }
 
-.services_cards h3 {
+.info_services_cards h3 {
     font-size: 25px;
 }
