--- a/client/src/css/Patients.css
+++ b/client/src/css/Patients.css
@@ -19,7 +19,7 @@
     align-items: center;
     justify-content: center;
     gap: 25px;
-    width: 800px;
+    width: 950px;
     padding: 15px;
 }
 
@@ -44,7 +44,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 10px;
+    padding: 10px 20px;
     width: 100%;
     height: 20%;
     background-color: beige;
