--- a/client/src/css/ButtonUser.css
+++ b/client/src/css/ButtonUser.css
@@ -1,4 +1,4 @@
-.create_login {
+.button_user {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -7,19 +7,19 @@
     gap: 25px;
     width: 120%;
     height: 85px;
+    padding: 60px 0;
     color: white;
 }
 
-.create_login__icon {
+.button_user__icon {
     cursor: pointer;
 }
 
-.create_login span{
+.button_user span{
     color: white;
 }
 
 .is-active {
-    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -27,11 +27,12 @@
     gap: 25px;
     width: 120%;
     height: 85px;
+    padding: 60px 0;
     background-color: #ffffff;
     color: black;
 }
 
-.create_login__option {
+.button_user__option {
     position: absolute;
     left: 100%;
     top: 0%;
@@ -40,8 +41,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 2px;
-    width: 140px;
+    gap: 10px;
+    width: 160px;
     height: auto;
     padding: 10px;
     background-color: white;
@@ -49,7 +50,26 @@
     color: black;
 }
 
-.create_login__span_active {
+.button_user__option__date {
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+}
+
+.button_user__option__username {
+    text-align: start;
+    width: 100%;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.button_user__option__email {
+    font-size: 15px;
+    text-align: start;
+    width: 100%;
+}
+
+.button_user__span_active {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -59,15 +79,27 @@
     color: black;
 }
 
-.create_login__option a {
+.button_user__option form {
     border-radius: 5px;
-    width: 100%;
+    width: 80%;
     padding: 8px 5px;
     cursor: pointer;
     color: black;
     user-select: none;
 }
 
-.create_login__option a:hover {
-    background-color: grey;
+.button_user__option__btn {
+    background-color: transparent;
+    border: none;
+    color: white;
+}
+
+.button_user__option form {
+    border: none;
+    background-color: rgb(151, 40, 40);
+    color: white;
+}
+
+.button_user__option form:hover {
+    background-color: rgb(167, 48, 48);
 }
