--- a/client/src/css/ButtonOptionUser.css
+++ b/client/src/css/ButtonOptionUser.css
@@ -7,6 +7,7 @@
     gap: 25px;
     width: 120%;
     height: 85px;
+    padding: 60px 0;
     color: white;
 }
 
@@ -27,6 +28,7 @@
     gap: 25px;
     width: 120%;
     height: 85px;
+    padding: 60px 0;
     background-color: #ffffff;
     color: black;
 }
@@ -69,5 +71,5 @@
 }
 
 .create_login__option a:hover {
-    background-color: grey;
+    background-color: rgba(128, 128, 128, 0.313);
 }
