--- a/client/src/css/ButtonOptionUser.css
+++ b/client/src/css/ButtonOptionUser.css
@@ -7,7 +7,7 @@
     gap: 25px;
     width: 120%;
     height: 85px;
-    padding: 60px 0;
+    padding: 20px 0;
     color: white;
 }
 
@@ -28,7 +28,7 @@
     gap: 25px;
     width: 120%;
     height: 85px;
-    padding: 60px 0;
+    padding: 20px 0;
     background-color: #ffffff;
     color: black;
 }
@@ -45,19 +45,9 @@
     gap: 2px;
     width: 140px;
     height: auto;
-    padding: 10px;
+    padding: 0 10px;
     background-color: white;
     border-radius: 0 10px 10px 0;
-    color: black;
-}
-
-.create_login__span_active {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 80px;
-    height: auto;
-    background-color: white;
     color: black;
 }
 
