--- a/client/src/css/ButtonUser.css
+++ b/client/src/css/ButtonUser.css
@@ -19,7 +19,7 @@
     color: white;
 }
 
-.is-active {
+.is-active-user {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -35,15 +35,14 @@
 .button_user__option {
     position: absolute;
     left: 100%;
-    top: 0%;
-    bottom: 0%;
+    left: 70px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 10px;
     width: 160px;
-    height: auto;
+    height: 120px;
     padding: 10px;
     background-color: white;
     border-radius: 0 10px 10px 0;
