--- a/client/src/css/MDPreview.css
+++ b/client/src/css/MDPreview.css
@@ -1,4 +1,4 @@
-.create_blog__md, .create_article__md, .create_article__md_empyt {
+.create_blog__md, .create_blog__md, .create_blog__md_empyt {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -10,7 +10,23 @@
     overflow: hidden;
 }
 
-.create_article__md_empyt {
+.create_blog__md {
+    background-color: rgba(43, 144, 43, 0.551);
+    border: 5px rgb(39, 133, 39) solid;
+    border-style: dashed;
+}
+
+.create_blog_div_successFile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+    color: rgb(17, 96, 17);
+    font-weight: bold;
+    font-size: 18px;
+}
+
+.create_blog__md_empyt {
     width: 350px;
     height: 450px;
     border-radius: 15px;
