--- a/client/src/css/NavegationInPage.css
+++ b/client/src/css/NavegationInPage.css
@@ -19,9 +19,13 @@
     justify-content: center;
     width: 25px;
     height: 25px;
-    background-color: rgb(118, 119, 118);
+    background-color: rgb(255, 255, 255);
     border-radius: 50px;
-    box-shadow: inset 0 0 5px rgba(82, 82, 82, 0.776);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.651);
+}
+
+.navegation_in_page_nav_list li:hover {
+    transform: scale(115%);
 }
 
 .navegation_in_page_nav_list li .link_to_footer {
