--- a/client/src/css/PDFPreview.css
+++ b/client/src/css/PDFPreview.css
@@ -10,6 +10,22 @@
     overflow: hidden;
 }
 
+.create_article__pdf {
+    background-color: rgba(43, 144, 43, 0.551);
+    border: 5px rgb(39, 133, 39) solid;
+    border-style: dashed;
+}
+
+.create_article_div_successFile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+    color: rgb(17, 96, 17);
+    font-weight: bold;
+    font-size: 18px;
+}
+
 .create_article__pdf_empyt {
     width: 350px;
     height: 450px;
