--- a/client/src/css/PageServices.css
+++ b/client/src/css/PageServices.css
@@ -57,6 +57,7 @@
 .services__container__service__list {
     display: flex;
     flex-direction: column;
+    align-items: start;
     gap: 10px;
     background-color: rgb(188, 188, 188);
     border-radius: 30px;
